# image-annotator-lib

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEVLOG.md  GEMINI.md  Makefile  PYDANTICAI_MIGRATION_CHANGES.md  README.md  models_data.json  pyproject.toml  test_agent_cache.py  test_anthropic_api_pydanticai_integration.py  test_cache_simple.py  test_google_api_pydanticai_integration.py  test_google_pydanticai.py  test_openai_integration.py  test_openai_lightweight.py  test_openrouter_api_pydanticai_integration.py  test_unified_provider_level_integration.py
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/rules/: coding-rules.mdc  debug.mdc  directory-structure-rules.mdc  directory-structure.mdc  doc-lookup-rules.mdc  encapsulation-rules.mdc  error-documentation.mdc  implement.mdc  lessons-learned.mdc  memory.mdc  plan.mdc  project-documentation-rules.mdc  rules.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/PULL_REQUEST_TEMPLATE/: model_refresh.md
.github/workflows/: refresh-models.yml  test.yml
.roo/: mcp.json  system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-mcp  system-prompt-orchestrator  system-prompt-write
.roo/rules/: directory-structure.mdc  memory.mdc  rules.mdc
.roo/rules-architect/: plan.mdc
.roo/rules-code/: implement.mdc
.roo/rules-debug/: debug.mdc
benchmarks/: __init__.py  benchmark_agent_creation.py  benchmark_inference.py  benchmark_memory.py  conftest.py
config/: annotator_config-sample.toml  annotator_config.toml  available_api_models.toml
docs/: ANTHROPIC_PYDANTICAI_IMPLEMENTATION.md  ANTHROPIC_PYDANTICAI_INTEGRATION_TEST_RESULTS.md  CHANGELOG_PYDANTICAI_INTEGRATION.md  GOOGLE_PYDANTICAI_IMPLEMENTATION.md  GOOGLE_PYDANTICAI_INTEGRATION_TEST_RESULTS.md  OPENROUTER_PYDANTICAI_IMPLEMENTATION.md  OPENROUTER_PYDANTICAI_INTEGRATION_TEST_RESULTS.md  PYDANTICAI_INTEGRATION_PLAN.md  README.md  architecture.md  developer_guide.md  evaluation-criteria.md  getting_started.md  inconsistency_report.md  integrations.md  lessons-learned.md  lessons-learned.mdc  product_requirement_docs.md  pydantic_ai_factory_comparison_report.md  rules.md  technical.md  web_api_annotator_design.md
docs/EXPLANATION/: design_decisions.md  integrated_architecture.md  legacy_info.md  refactoring.md
docs/PLAN/: IMPLEMENTATION_PLAN.md  api_model_discovery_plan.md  config_add_default_setting_plan.md  logger_issue_and_solution.md  model_factory_refactor_plan.md
docs/REFERENCE/: api.md  configuration.md  models.md
docs/decisions/: 0001-runtime-validation-test-lanes.md  0002-score-model-output-contract.md  0003-rating-model-output-contract.md  0004-onnx-tagger-loader-and-model-selection.md  0005-provider-batch-api-contract.md  0006-annotation-outcome-contract.md  0007-webapi-dual-endpoint-runtime.md  0008-webapi-bounded-image-concurrency.md  0009-scorer-value-range-reference.md  0010-okf-frontmatter-for-docs.md  README.md  index.md
docs/migration/: 0021-litellm-migration.md
docs/model-specs/: rating-model-candidates.md
example/: example_lib.py  webapi_annotate.py
memory-bank/: activeContext.md  decisionLog.md  mypy_fix_plan.md  productContext.md  progress.md
prototypes/: README.md  __init__.py
prototypes/pydanticai_integration/: __init__.py  base_annotator.py  dependencies.py  integration_test.py  openai_agent_annotator.py  pydantic_ai_agent.py  pydanticai_webapi_annotator.py  simple_test.py
scripts/: setup.sh
src/image_annotator_lib/: __init__.py  api.py  model_installer.py
tasks/: active_context.md  phase1a_config_objects_plan.md  phase1a_investigation_summary.md  tasks_plan.md
tasks/rfc/: ANALYSIS_dev_container_performance_bottleneck.md  api_model_discovery_plan.md  base_py_split_plan.md  comprehensive_test_strategy.md  config_add_default_setting_plan.md  efficient_webapi_integration_plan.md  integration_test_implementation_plan.md  model_factory_refactor_plan.md  pydanticai_agent_integration_design.md  pydanticai_integration_plan.md  unit_test_refactoring_plan.md  webapi_model_discovery_integration_plan.md
tests/: conftest.py  manual_simple_test.py  test_bdd_runner.py
tests/features/: __init__.py  annotation_common.feature  annotation_scorer.feature  annotation_tagger.feature  api_model_discovery.feature  base.feature  base.feature.deprecated  conftest.py  model_errors.feature  model_factory.feature  model_factory_v2.feature  pydantic_ai_factory_unified.feature  registry.feature  simplified_agent_wrapper.feature  tagger.feature  test_api_model_discovery.py  test_model_factory_v2.py  test_pydantic_ai_factory_unified.py  test_simplified_agent_wrapper.py  utils.feature  webapi_annotate.feature
tests/integration/: conftest.py  test_anthropic_api_annotator_integration.py  test_config_migration.py  test_context_manager_lifecycle_integration.py  test_context_manager_robustness.py  test_cross_provider_integration.py  test_end_to_end_workflow_integration.py  test_error_handling_and_fallback_integration.py  test_google_api_annotator_integration.py  test_list_annotator_info_e2e.py  test_local_ml_models_integration.py  test_memory_management_integration.py  test_memory_management_simple.py  test_model_factory_integration.py  test_openai_api_response_integration.py  test_openrouter_pydanticai_integration.py  test_provider_manager_cross_provider_integration.py  test_provider_manager_integration.py  test_pydantic_ai_factory_api_key_management.py  test_pydantic_ai_factory_integration.py  test_pydantic_ai_integration.py  test_registry_integration.py  test_scorer_integration.py  test_simple.py  test_tagger_integration.py  test_unified_provider_level_integration.py  test_utils_integration.py
tests/runtime_validation/: conftest.py  test_openai_batch_moderation_runtime.py  test_openai_chat_completions_batch_runtime.py  test_real_model_runtime.py  test_real_webapi_runtime.py
tests/step_defs/: test_annotate.py
tools/: 00.py  check_api_model_discovery.py  check_googleapi_payload.py  check_openrouter_models.py  check_openrouter_payload.py  pydantic_ai_agent.py  webapi_annotate.py
(+217 files in other folders)
