[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-annotator-lib"
version = "0.1.2"
description = "Integrated library for image tagging and scoring."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "NEXTAltair" }]
keywords = [ # Merged keywords
    "ai",
    "machine-learning",
    "tagging",
    "image-annotation",
    "computer-vision",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",                         # Keep general, specific handled by deps
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    # Core & Data Handling
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "toml",
    "tensorflow>=2.19.0;platform_system!='Darwin'", # Use newer version from scorer
    "transformers>=4.50.0",
    "tf-keras>=2.19.0",
    "accelerate>=0.26.0",
    "diffusers>=0.24.0",
    "huggingface_hub>=1.1.0",  # >=1.1.0: snapshot_download の byte 集約 progress (tqdm_class) が必要 (PR #151)
    "onnxruntime>=1.16.0",
    "onnxruntime-gpu>=1.16.0;platform_system!='Darwin'",
    "safetensors>=0.4.0",
    "timm>=0.9.0",
    "google-genai",
    "openai",
    "anthropic",
    "python-dotenv",
    # Image Processing & Utils
    "opencv-python>=4.8.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "imagehash",
    "loguru",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "datetime>=5.5",
    "pydantic-ai>=0.3.2",
    "tenacity>=9.0", # ADR 0023 Phase 1.8 (Issue #46): pydantic_ai.retries が要求 (transitive を明示化)
    "litellm>=1.0.0",
    "pyyaml>=6.0.2",
    "polars>=1.31.0",
    "pytest-xdist>=3.7.0",
    "pytest-bdd>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-requests>=2.32.0",
    "types-Pillow",
    "types-toml",
    "psutil",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/NEXTAltair/image-annotator-lib"
Repository = "https://github.com/NEXTAltair/image-annotator-lib.git"

[tool.ruff]
fix = true
line-length = 108
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

exclude = [
    "*/__pycache__"
]

ignore = [
    "E501",   # Line too long (handled by formatter)
]

# confusable 警告を許可する文字。日本語表記のカタカナ ノ (U+30CE)・全角括弧 （ ）・
# UI/乗算で使う × (U+00D7)。残る全角記号は RUF001/002/003 で検出・半角化させる。
allowed-confusables = ["ノ", "（", "）", "×"]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# 複雑度は高いが分割の費用対効果が低い既存関数を個別に除外 (C901)
"prototypes/pydanticai_integration/pydantic_ai_agent.py" = ["C901"]
"src/image_annotator_lib/core/base/tensorflow.py" = ["C901"]
"src/image_annotator_lib/model_class/tagger_tensorflow.py" = ["C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["prototypes", "examples", "docs", ".git", ".ruff_cache", ".mypy_cache", "__pycache__"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--tb=short",
    "--maxfail=5",
    "-ra",
]
markers = [
    "unit: ユニットテスト（全体）",
    "integration: 統合テスト",
    "webapi: Web APIテスト",
    "scorer: スコアラーモデルテスト",
    "tagger: タガーモデルテスト",
    "fast: 高速実行テスト（外部依存なし、<1秒）",
    "standard: 標準ユニットテスト（軽いモック、<5秒）",
    "downloads_and_runs_model: model download + 実推論 + heavy native dep 初期化を伴う on-demand validation。CI 不経由、ローカル only (ADR 0001 amended 2026-05-18)",
    "model_factory: Tests for the model factory (ModelLoad)",
    "fast_integration: CI対応モックテスト",
    "calls_real_webapi: 実 provider API key で実リクエストを送信する on-demand validation。CI 不経由、ローカル only (ADR 0001 amended 2026-05-18)",
    "provider_specific: プロバイダー固有テスト",
    "bdd: BDD（Behavior-Driven Development）テスト",
    "bdd_core: Core BDD scenarios (SimplifiedAgentWrapper, Factory)",
    "bdd_integration: Integration BDD (WebAPI, Provider-level)",
    "bdd_errors: Error handling BDD",
]

[tool.coverage.run]
source = ["image_annotator_lib"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "src/image_annotator_lib/exceptions/*",
]

[tool.coverage.report]
fail_under = 75 # カバレッジが75%未満なら失敗
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",                  # ... (Ellipsis)
]

[tool.hatch.build.targets.wheel]
packages = ["src/image_annotator_lib"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.shared-data]
"src/image_annotator_lib/py.typed" = "image_annotator_lib/py.typed"
